# tuyaZigbee

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
IASsensor/: CMakeLists.txt  app_cfg.h  app_ui.c  app_ui.h  board_8258_evk_v1p2.h  board_826x_dongle_pa.h  board_8278_dongle.h  board_8278_evk.h  board_ZG-102ZL.h  board_b91_evk.h  contactSensor.c  contactSensor.h  contactSensorEpCfg.c  stack_cfg.h  version_cfg.h  zb_appCb.c  zcl_contactSensorCb.c  zcl_sensorControl.h
Releases/OTA/: index.json
Releases/OTA/images/: 6464-03a1-10023001.zigbee
Releases/TuyaOTA/TS0041/: index.json
Releases/TuyaOTA/TS0041/images/: 1141-D3A3-FF.zigbee
bootloader/: CMakeLists.txt  app_cfg.h  board_8258_dongle.h  board_8258_evk.h  board_8258_evk_v1p2.h  board_826x_dongle.h  board_826x_evk.h  board_8278_dongle.h  board_8278_evk.h  board_b91_dongle.h  board_b91_evk.h  bootloader.c  bootloader.h  comm_cfg.h  main.c  version_cfg.h
cmake/: TelinkSDK.cmake  TelinkSDK_Linux.cmake  TelinkSDK_Win.cmake  Toolchain.cmake
cmake_timestamp/: CMakeLists.txt  license.txt  readme.md  readme.txt  timestamp.c  timestamp.h
common/: board_tuya_W.h  buttons.h  comm_cfg.h  drv_keyboard_enh.c  factory_reset.c  factory_reset.h  version.h  zcl_onoffSwitchCfg.c  zcl_onoffSwitchCfg.h
contactsensor/: app_cfg.h  app_ui.c  app_ui.h  board_8258_dongle.h  board_8258_evk.h  board_826x_dongle.h  board_826x_evk.h  board_ZG-102ZL.h  board_b91_dongle.h  contactSensor.c  contactSensor.h  contactSensorEpCfg.c  sampleSensor.c  sampleSensor.h  sampleSensorEpCfg.c  stack_cfg.h  version_cfg.h  zb_appCb.c  zcl_contactSensorCb.c  zcl_sampleSensorCb.c
converters/: Fixed_TS0041.js  Fixed_TS0501B.js  Fixed_TS0601.js  Fixed_ZBWS01A_TS0041.js  ts0041.js  ts0501b.js
device_config/: iaszone_zg102zl.h  light_ts0501b.h  switch_zbws01a.h
docs/: SCH_lonsonho-switch-1.json  Schematic_TuYa_led_driver.json  devices-not-supported.md  devices-wip.md  devices.md  doorSensor-notes.txt  flash.md  light-notes.txt  linux_build.md  ota.md  ota_tuya.md  sdk_installation.md  switch-lonsonho.txt  tempSensor-notes.txt  todo_devices.txt  windows_build.md
docs/tuyaNDIR/: ndir.txt
light/: CMakeLists.txt  app_cfg.h  app_ui.c  app_ui.h  board_8258_dongle.h  board_8258_evk.h  board_8258_evk_v1p2.h  board_826x_dongle.h  board_826x_evk.h  board_8278_dongle.h  board_8278_evk.h  board_b91_dongle.h  board_b91_evk.h  stack_cfg.h  tuyaLight.c  tuyaLight.h  tuyaLightCtrl.c  tuyaLightCtrl.h  tuyaLightEpCfg.c  version_cfg.h  zb_afTestCb.c  zb_appCb.c  zcl_colorCtrlCb.c  zcl_levelCb.c  zcl_onOffCb.c  zcl_sceneCb.c  zcl_tuyaLightCb.c
switch/: CMakeLists.txt  app_cfg.h  app_ui.c  app_ui.h  board_8258_dongle.h  board_8258_evk.h  board_8258_evk_v1p2.h  board_826x_dongle.h  board_826x_dongle_pa.h  board_826x_evk.h  board_8278_dongle.h  board_8278_evk.h  board_b91_dongle.h  board_b91_evk.h  board_ts0041.h  stack_cfg.h  tuyaSwitch.c  tuyaSwitch.h  tuyaSwitchEpCfg.c  version_cfg.h  zb_appCb.c  zcl_tuyaSwitchCb.c
tools/: clear_flash8.sh  crc.c  dump_fcfg.sh  dump_head.sh  dump_mac.sh  dump_ucfg.sh  flash_fcfg.sh  flash_stat.sh  flash_unlock.sh  get_fcfg.sh  make_ota.py  otaheader.bt  read_flash.sh  tlheader.bt  utility.c  utility.h  write_flash0.sh  write_flash8.sh  write_flashOTA.sh
