set(CMAKE_TOOLCHAIN_FILE "${CMAKE_SOURCE_DIR}/cmake/Toolchain.cmake")

CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(tuyaZigbee LANGUAGES C ASM)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

ADD_SUBDIRECTORY(cmake_timestamp timestamp)
ADD_SUBDIRECTORY(IASsensor)
ADD_SUBDIRECTORY(switch)
ADD_SUBDIRECTORY(light)
